// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render tests can render a single region with Pileup + BamAdapter 2`] = `
Object {
  "rectangles": Object {
    "4521984": Array [
      2,
      0,
      102,
      7,
    ],
    "4522237": Array [
      7,
      9,
      107,
      16,
    ],
    "4522500": Array [
      15,
      18,
      115,
      25,
    ],
    "4522762": Array [
      16,
      27,
      116,
      34,
    ],
    "4523023": Array [
      17,
      36,
      117,
      43,
    ],
    "4523283": Array [
      42,
      45,
      142,
      52,
    ],
    "4523538": Array [
      43,
      54,
      143,
      61,
    ],
    "4523795": Array [
      47,
      63,
      147,
      70,
    ],
    "4524052": Array [
      55,
      72,
      155,
      79,
    ],
    "4524307": Array [
      65,
      81,
      165,
      88,
    ],
    "4524562": Array [
      76,
      90,
      176,
      97,
    ],
    "4524815": Array [
      90,
      99,
      190,
      106,
    ],
    "4525068": Array [
      94,
      108,
      194,
      115,
    ],
    "4525322": Array [
      109,
      0,
      209,
      7,
    ],
    "4525576": Array [
      123,
      9,
      223,
      16,
    ],
    "4525835": Array [
      125,
      18,
      225,
      25,
    ],
    "4526091": Array [
      132,
      27,
      232,
      34,
    ],
    "4526356": Array [
      140,
      36,
      240,
      43,
    ],
    "4526613": Array [
      147,
      45,
      247,
      52,
    ],
    "4526869": Array [
      149,
      54,
      249,
      61,
    ],
    "4527129": Array [
      152,
      63,
      252,
      70,
    ],
    "4527384": Array [
      186,
      72,
      286,
      79,
    ],
    "4527644": Array [
      237,
      0,
      337,
      7,
    ],
    "4527900": Array [
      258,
      9,
      358,
      16,
    ],
    "4528158": Array [
      291,
      18,
      391,
      25,
    ],
    "4528415": Array [
      301,
      27,
      401,
      34,
    ],
    "4528674": Array [
      302,
      36,
      402,
      43,
    ],
    "4528935": Array [
      311,
      45,
      411,
      52,
    ],
    "4529189": Array [
      321,
      54,
      421,
      61,
    ],
    "4529446": Array [
      325,
      63,
      425,
      70,
    ],
    "4529704": Array [
      327,
      72,
      427,
      79,
    ],
    "4529960": Array [
      338,
      0,
      438,
      7,
    ],
    "4530218": Array [
      354,
      81,
      454,
      88,
    ],
    "4530479": Array [
      390,
      9,
      490,
      16,
    ],
    "4530736": Array [
      399,
      18,
      499,
      25,
    ],
    "4530996": Array [
      413,
      27,
      513,
      34,
    ],
    "4531253": Array [
      413,
      36,
      513,
      43,
    ],
    "4531511": Array [
      422,
      45,
      522,
      52,
    ],
    "4531768": Array [
      431,
      54,
      531,
      61,
    ],
    "4532023": Array [
      432,
      63,
      532,
      70,
    ],
    "4532283": Array [
      453,
      0,
      553,
      7,
    ],
    "4532542": Array [
      461,
      72,
      561,
      79,
    ],
    "4532795": Array [
      467,
      81,
      567,
      88,
    ],
    "4533053": Array [
      481,
      90,
      581,
      97,
    ],
    "4533313": Array [
      485,
      99,
      585,
      106,
    ],
    "4533575": Array [
      487,
      108,
      587,
      115,
    ],
    "4533834": Array [
      495,
      9,
      595,
      16,
    ],
    "4534100": Array [
      509,
      18,
      609,
      25,
    ],
    "4534362": Array [
      513,
      117,
      613,
      124,
    ],
    "4534621": Array [
      540,
      27,
      640,
      34,
    ],
    "4534877": Array [
      545,
      36,
      645,
      43,
    ],
    "4535134": Array [
      556,
      0,
      656,
      7,
    ],
    "4535394": Array [
      562,
      45,
      662,
      52,
    ],
    "4535651": Array [
      564,
      54,
      664,
      61,
    ],
    "4535906": Array [
      564,
      63,
      664,
      70,
    ],
    "4536165": Array [
      564,
      72,
      664,
      79,
    ],
    "4536423": Array [
      566,
      126,
      666,
      133,
    ],
    "4536689": Array [
      570,
      81,
      670,
      88,
    ],
    "4536952": Array [
      574,
      135,
      674,
      142,
    ],
    "4537214": Array [
      574,
      144,
      674,
      151,
    ],
    "4537471": Array [
      577,
      153,
      677,
      160,
    ],
    "4537728": Array [
      579,
      162,
      679,
      169,
    ],
    "4537984": Array [
      582,
      90,
      682,
      97,
    ],
    "4538240": Array [
      593,
      99,
      693,
      106,
    ],
    "4538496": Array [
      595,
      108,
      695,
      115,
    ],
    "4538753": Array [
      611,
      9,
      711,
      16,
    ],
    "4539018": Array [
      611,
      18,
      711,
      25,
    ],
    "4539274": Array [
      612,
      171,
      712,
      178,
    ],
    "4539531": Array [
      618,
      117,
      718,
      124,
    ],
    "4539793": Array [
      625,
      180,
      725,
      187,
    ],
    "4540054": Array [
      626,
      189,
      726,
      196,
    ],
    "4540318": Array [
      630,
      198,
      730,
      205,
    ],
    "4540572": Array [
      630,
      207,
      730,
      214,
    ],
    "4540835": Array [
      652,
      27,
      752,
      34,
    ],
    "4541095": Array [
      660,
      0,
      760,
      7,
    ],
    "4541356": Array [
      661,
      36,
      761,
      43,
    ],
    "4541614": Array [
      664,
      45,
      764,
      52,
    ],
    "4541876": Array [
      679,
      54,
      779,
      61,
    ],
    "4542131": Array [
      685,
      63,
      785,
      70,
    ],
    "4542390": Array [
      690,
      72,
      790,
      79,
    ],
    "4542645": Array [
      713,
      9,
      813,
      16,
    ],
    "4542907": Array [
      715,
      18,
      815,
      25,
    ],
    "4543166": Array [
      720,
      81,
      820,
      88,
    ],
    "4543425": Array [
      725,
      90,
      825,
      97,
    ],
    "4543681": Array [
      727,
      99,
      827,
      106,
    ],
    "4543943": Array [
      729,
      108,
      829,
      115,
    ],
    "4544200": Array [
      730,
      117,
      830,
      124,
    ],
    "4544461": Array [
      747,
      126,
      847,
      133,
    ],
    "4544716": Array [
      764,
      0,
      864,
      7,
    ],
    "4544974": Array [
      766,
      27,
      866,
      34,
    ],
    "4545233": Array [
      775,
      36,
      875,
      43,
    ],
    "4545496": Array [
      786,
      45,
      886,
      52,
    ],
    "4545752": Array [
      797,
      54,
      897,
      61,
    ],
  },
  "totalHeight": 216,
}
`;

exports[`render tests can render a single region with SvgFeatures + BamAdapter 2`] = `
Object {
  "rectangles": Object {
    "4521984": Array [
      2,
      0,
      195,
      25,
    ],
    "4522237": Array [
      7,
      27,
      200,
      52,
    ],
    "4522500": Array [
      15,
      54,
      215,
      79,
    ],
    "4522762": Array [
      16,
      81,
      209,
      106,
    ],
    "4523023": Array [
      17,
      108,
      217,
      133,
    ],
    "4523283": Array [
      42,
      135,
      235,
      160,
    ],
    "4523538": Array [
      43,
      162,
      243,
      187,
    ],
    "4523795": Array [
      47,
      189,
      247,
      214,
    ],
    "4524052": Array [
      55,
      216,
      255,
      241,
    ],
    "4524307": Array [
      65,
      243,
      258,
      268,
    ],
    "4524562": Array [
      76,
      270,
      269,
      295,
    ],
    "4524815": Array [
      90,
      297,
      283,
      322,
    ],
    "4525068": Array [
      94,
      324,
      294,
      349,
    ],
    "4525322": Array [
      109,
      351,
      309,
      376,
    ],
    "4525576": Array [
      123,
      378,
      330,
      403,
    ],
    "4525835": Array [
      125,
      405,
      325,
      430,
    ],
    "4526091": Array [
      132,
      432,
      339,
      457,
    ],
    "4526356": Array [
      140,
      459,
      347,
      484,
    ],
    "4526613": Array [
      147,
      486,
      347,
      511,
    ],
    "4526869": Array [
      149,
      513,
      342,
      538,
    ],
    "4527129": Array [
      152,
      540,
      359,
      565,
    ],
    "4527384": Array [
      186,
      567,
      386,
      592,
    ],
    "4527644": Array [
      237,
      0,
      437,
      25,
    ],
    "4527900": Array [
      258,
      27,
      458,
      52,
    ],
    "4528158": Array [
      291,
      54,
      498,
      79,
    ],
    "4528415": Array [
      301,
      81,
      508,
      106,
    ],
    "4528674": Array [
      302,
      108,
      502,
      133,
    ],
    "4528935": Array [
      311,
      135,
      511,
      160,
    ],
    "4529189": Array [
      321,
      162,
      528,
      187,
    ],
    "4529446": Array [
      325,
      189,
      525,
      214,
    ],
    "4529704": Array [
      327,
      216,
      527,
      241,
    ],
    "4529960": Array [
      338,
      243,
      538,
      268,
    ],
    "4530218": Array [
      354,
      270,
      554,
      295,
    ],
    "4530479": Array [
      390,
      297,
      597,
      322,
    ],
    "4530736": Array [
      399,
      324,
      599,
      349,
    ],
    "4530996": Array [
      413,
      351,
      620,
      376,
    ],
    "4531253": Array [
      413,
      378,
      606,
      403,
    ],
    "4531511": Array [
      422,
      405,
      629,
      430,
    ],
    "4531768": Array [
      431,
      432,
      624,
      457,
    ],
    "4532023": Array [
      432,
      459,
      625,
      484,
    ],
    "4532283": Array [
      453,
      0,
      653,
      25,
    ],
    "4532542": Array [
      461,
      27,
      647,
      52,
    ],
    "4532795": Array [
      467,
      486,
      667,
      511,
    ],
    "4533053": Array [
      481,
      513,
      674,
      538,
    ],
    "4533313": Array [
      485,
      540,
      685,
      565,
    ],
    "4533575": Array [
      487,
      567,
      687,
      592,
    ],
    "4533834": Array [
      495,
      594,
      702,
      619,
    ],
    "4534100": Array [
      509,
      54,
      716,
      79,
    ],
    "4534362": Array [
      513,
      81,
      713,
      106,
    ],
    "4534621": Array [
      540,
      108,
      747,
      133,
    ],
    "4534877": Array [
      545,
      135,
      752,
      160,
    ],
    "4535134": Array [
      556,
      162,
      763,
      187,
    ],
    "4535394": Array [
      562,
      189,
      769,
      214,
    ],
    "4535651": Array [
      564,
      216,
      757,
      241,
    ],
    "4535906": Array [
      564,
      243,
      771,
      268,
    ],
    "4536165": Array [
      564,
      270,
      779,
      295,
    ],
    "4536423": Array [
      566,
      621,
      766,
      646,
    ],
    "4536689": Array [
      570,
      648,
      777,
      673,
    ],
    "4536952": Array [
      574,
      675,
      781,
      700,
    ],
    "4537214": Array [
      574,
      702,
      789,
      727,
    ],
    "4537471": Array [
      577,
      729,
      784,
      754,
    ],
    "4537728": Array [
      579,
      756,
      779,
      781,
    ],
    "4537984": Array [
      582,
      783,
      797,
      808,
    ],
    "4538240": Array [
      593,
      810,
      793,
      835,
    ],
    "4538496": Array [
      595,
      837,
      802,
      862,
    ],
    "4538753": Array [
      611,
      297,
      826,
      322,
    ],
    "4539018": Array [
      611,
      324,
      826,
      349,
    ],
    "4539274": Array [
      612,
      378,
      819,
      403,
    ],
    "4539531": Array [
      618,
      864,
      818,
      889,
    ],
    "4539793": Array [
      625,
      351,
      825,
      376,
    ],
    "4540054": Array [
      626,
      432,
      841,
      457,
    ],
    "4540318": Array [
      630,
      405,
      830,
      430,
    ],
    "4540572": Array [
      630,
      459,
      830,
      484,
    ],
    "4540835": Array [
      652,
      27,
      859,
      52,
    ],
    "4541095": Array [
      660,
      0,
      875,
      25,
    ],
    "4541356": Array [
      661,
      891,
      876,
      916,
    ],
    "4541614": Array [
      664,
      918,
      871,
      943,
    ],
    "4541876": Array [
      679,
      486,
      886,
      511,
    ],
    "4542131": Array [
      685,
      513,
      885,
      538,
    ],
    "4542390": Array [
      690,
      540,
      890,
      565,
    ],
    "4542645": Array [
      713,
      567,
      920,
      592,
    ],
    "4542907": Array [
      715,
      81,
      922,
      106,
    ],
    "4543166": Array [
      720,
      54,
      927,
      79,
    ],
    "4543425": Array [
      725,
      594,
      940,
      619,
    ],
    "4543681": Array [
      727,
      945,
      934,
      970,
    ],
    "4543943": Array [
      729,
      972,
      936,
      997,
    ],
    "4544200": Array [
      730,
      999,
      930,
      1024,
    ],
    "4544461": Array [
      747,
      1026,
      954,
      1051,
    ],
    "4544716": Array [
      764,
      108,
      964,
      133,
    ],
    "4544974": Array [
      766,
      135,
      973,
      160,
    ],
    "4545233": Array [
      775,
      162,
      990,
      187,
    ],
    "4545496": Array [
      786,
      189,
      1001,
      214,
    ],
    "4545752": Array [
      797,
      216,
      1004,
      241,
    ],
  },
  "totalHeight": 1053,
}
`;
